# LearnMPI

./: CMakeLists.txt  README.md  main.c
